@@ -46,7 +46,7 @@ clean:
 		$(FULL3_TARGET_FS) $(FULL5_TARGET_FS) || true
 	rm -f $(COMB_TARGET_FS) $(ROOT_TARGET_FS) $(ROOT_NET_TARGET_FS) \
 		$(FULL3_TARGET_FS) $(FULL5_TARGET_FS) boot images.zip core
-	rm -rf rootfs_template $(ROOTDIR)
+	rm -rf $(ROOTDIR)
 	@for i in $(DIRS); do make -C $$i clean ; done
 
 ###############################################################################
@@ -119,134 +119,102 @@ $(ELKS_DIR)/arch/i86/boot/Image: $(ELKS_DIR)/.config
 
 $(FD_BSECT):
 	make -C $(MINIX_BOOT)
-	make -C $(MINIX_BOOT) minix.bin
+	make -C $(MINIX_BOOT) bootbin
 
 $(KHELPER):
-	make -C $(MINIX_BOOT)
+	make -C $(MINIX_BOOT) minix_elks.bin
 
 ###############################################################################
 #
-# Old commands, left as is for now.
+# Create disk images
 
-$(COMB_TARGET_FS):
-	dd if=/dev/zero of=$(COMB_TARGET_FS) bs=1024 count=$(COMB_TARGET_BLKS)
+kernel_image: $(ELKS_DIR)/arch/i86/boot/Image
 
-$(FULL3_TARGET_FS):
-	dd if=/dev/zero of=$(FULL3_TARGET_FS) bs=1024 count=$(FULL3_TARGET_BLKS)
+boot_blocks: $(FD_BSECT) $(KHELPER)
 
-$(FULL5_TARGET_FS):
-	dd if=/dev/zero of=$(FULL5_TARGET_FS) bs=1024 count=$(FULL5_TARGET_BLKS)
+_build_bootable_target: _build_target kernel_image boot_blocks
+	mkdir -p $(TARGET_MNT)/boot
+	cp $(ELKS_DIR)/arch/i86/boot/Image $(TARGET_MNT)/boot/linux
+	cp $(KHELPER) $(TARGET_MNT)/boot/boot
+	umount $(TARGET_FS)
+	dd if=$(FD_BSECT) of=$(TARGET_FS) bs=512 count=2 conv=notrunc 2>/dev/null
 
-$(ROOT_TARGET_FS):
-	dd if=/dev/zero of=$(ROOT_TARGET_FS) bs=1024 count=$(ROOT_TARGET_BLKS)
+_build_nonbootable_target: _build_target
+	umount $(TARGET_FS)
 
-$(ROOT_NET_TARGET_FS):
-	dd if=/dev/zero of=$(ROOT_NET_TARGET_FS) bs=1024 count=$(ROOT_NET_TARGET_BLKS)
+_build_target: all banner check_id _populate_target
 
-$(SIBO_TARGET_FS):
-	dd if=/dev/zero of=$(SIBO_TARGET_FS) bs=1024 count=$(SIBO_TARGET_BLKS)
+_populate_target: _mount_target
+	for i in $(DIRS); do make -C $$i $(TARGET_RFS)||exit 1; done >/dev/null
+	$(ELKSCMD_DIR)/tools/ver.pl $(ELKS_DIR)/Makefile > $(TARGET_MNT)/etc/issue
+	[ "$(INSTALL_KTCP)" = "yes" ] && \
+	cp -p $(ELKSNET_DIR)/ktcp/ktcp $(TARGET_MNT)/bin || true
 
-$(ELKSCMD_DIR)/rootfs_template/etc/issue: $(ELKSCMD_DIR)/rootfs_template/etc/passwd $(ELKS_DIR)/Makefile
-	$(ELKSCMD_DIR)/tools/ver.pl $(ELKS_DIR)/Makefile > $(ELKSCMD_DIR)/rootfs_template/etc/issue
+_mount_target:
+	umount $(TARGET_FS) >/dev/null 2>&1 || true
+	dd if=/dev/zero of=$(TARGET_FS) bs=1024 count=$(TARGET_BLKS) 2>/dev/null
+	$(MKFS) $(MKFS_OPTS) $(TARGET_FS) $(TARGET_BLKS) >/dev/null
+	mkdir -p $(TARGET_MNT)
+	mount $(LOOP) $(TARGET_FS) $(TARGET_MNT)
+	(cd $(ELKSCMD_DIR)/rootfs_template; \
+	tar cf - --exclude CVS --exclude .keep *) | \
+	(cd $(TARGET_MNT); tar xpf -)
+	@(cd $(TARGET_MNT)/dev; ./MAKEDEV; rm MAKEDEV MAKESET)
 
-mount_combfs: $(COMB_TARGET_FS) $(ELKSCMD_DIR)/rootfs_template/etc/issue
-	$(MKFS) $(MKFS_OPTS) $(COMB_TARGET_FS) $(COMB_TARGET_BLKS)
-	mount $(COMB_TARGET_FS) $(TARGET_MNT) $(LOOP)
-	(cd $(ELKSCMD_DIR)/rootfs_template ; tar cf - --exclude CVS *) | \
-		(cd $(TARGET_MNT) ; tar xpvf -)
-	(cd $(TARGET_MNT)/dev ; ./MAKEDEV)
+banner:
+	@echo "*"
+	@echo "* Building image: `basename $(TARGET_FS)`"
+	@echo "*"
 
-mount_full3fs: $(FULL3_TARGET_FS) $(ELKSCMD_DIR)/rootfs_template/etc/issue
-	$(MKFS) $(MKFS_OPTS) $(FULL3_TARGET_FS) $(FULL3_TARGET_BLKS)
-	mount $(FULL3_TARGET_FS) $(TARGET_MNT) $(LOOP)
-	(cd $(ELKSCMD_DIR)/rootfs_template ; tar cf - --exclude CVS *) | \
-		(cd $(TARGET_MNT) ; tar xpvf -)
-	(cd $(TARGET_MNT)/dev ; ./MAKEDEV)
+check_id:
+	@if [ "`id -u`" -ne "0" ]; then \
+		echo -e "\n\nERROR: Only root can build disk images.\n\n"; \
+	exit 1; \
+	fi
 
-mount_full5fs: $(FULL5_TARGET_FS) $(ELKSCMD_DIR)/rootfs_template/etc/issue
-	$(MKFS) $(MKFS_OPTS) $(FULL5_TARGET_FS) $(FULL5_TARGET_BLKS)
-	mount $(FULL5_TARGET_FS) $(TARGET_MNT) $(LOOP)
-	(cd $(ELKSCMD_DIR)/rootfs_template ; tar cf - --exclude CVS *) | \
-		(cd $(TARGET_MNT) ; tar xpvf -)
-	(cd $(TARGET_MNT)/dev ; ./MAKEDEV)
+full3:
+	@$(MAKE) _build_bootable_target \
+		TARGET_FS=$(FULL3_TARGET_FS) \
+		TARGET_RFS=rfs \
+		TARGET_BLKS=$(FULL3_TARGET_BLKS) \
+		INSTALL_KTCP=yes
 
-mount_rootfs: $(ROOT_TARGET_FS) $(ELKSCMD_DIR)/rootfs_template/etc/issue
-	$(MKFS) $(MKFS_OPTS) $(ROOT_TARGET_FS) $(ROOT_TARGET_BLKS)
-	mount $(ROOT_TARGET_FS) $(TARGET_MNT) $(LOOP)
-	(cd $(ELKSCMD_DIR)/rootfs_template ; tar cf - --exclude CVS *) | \
-		(cd $(TARGET_MNT) ; tar xpvf -)
-	(cd $(TARGET_MNT)/dev ; ./MAKEDEV)
+full5:
+	@$(MAKE) _build_bootable_target \
+		TARGET_FS=$(FULL5_TARGET_FS) \
+		TARGET_RFS=rfs \
+		TARGET_BLKS=$(FULL5_TARGET_BLKS) \
+		INSTALL_KTCP=yes
 
-mount_rootnetfs: $(ROOT_NET_TARGET_FS) $(ELKSCMD_DIR)/rootfs_template/etc/issue
-	$(MKFS) $(MKFS_OPTS) $(ROOT_NET_TARGET_FS) $(ROOT_NET_TARGET_BLKS)
-	mount $(ROOT_NET_TARGET_FS) $(TARGET_MNT) $(LOOP)
-	(cd $(ELKSCMD_DIR)/rootfs_template ; tar cf - --exclude CVS *) | \
-		(cd $(TARGET_MNT) ; tar xpvf -)
-	(cd $(TARGET_MNT)/dev ; ./MAKEDEV)
-	
-mount_sibofs: $(SIBO_TARGET_FS) $(ELKSCMD_DIR)/rootfs_template/etc/issue
-	$(MKFS) $(MKFS_OPTS) $(SIBO_TARGET_FS) $(SIBO_TARGET_BLKS)
-	mount $(SIBO_TARGET_FS) $(TARGET_MNT) $(LOOP)
-	(cd $(ELKSCMD_DIR)/rootfs_template ; tar cf - --exclude CVS *) | \
-		(cd $(TARGET_MNT) ; tar xpvf -)
-	(cd $(TARGET_MNT) ; rm -rf home boot root var)
-	cp SIBODEV $(TARGET_MNT)/dev/SIBODEV
-	(cd $(TARGET_MNT)/dev ; ./SIBODEV ; rm -f MAKEDEV SIBODEV )
-	
+comb:
+	@$(MAKE) _build_bootable_target \
+		TARGET_FS=$(COMB_TARGET_FS) \
+		TARGET_RFS=min_rfs \
+		TARGET_BLKS=$(COMB_TARGET_BLKS)
 
-#rfs: mount_rfs
-#	@for i in $(DIRS); do make -C $$i rfs ; done
-#	umount $(TARGET_FS)
-	
-#min_rfs: mount_rfs
-#	@for i in $(DIRS); do make -C $$i min_rfs ; done
-#	umount $(TARGET_FS)
+comb_net:
+	@$(MAKE) _build_bootable_target \
+		TARGET_FS=$(ROOT_NET_TARGET_FS) \
+		TARGET_RFS=net_rfs \
+		TARGET_BLKS=$(ROOT_NET_TARGET_BLKS) \
+		INSTALL_KTCP=yes
 
 boot: $(ELKS_DIR)/arch/i86/boot/Image
 	cp $(ELKS_DIR)/arch/i86/boot/Image boot
 	
 
-comb: mount_combfs $(ELKS_DIR)/arch/i86/boot/Image $(FD_BSECT) $(KHELPER)
-	@for i in $(DIRS); do make -C $$i min_rfs ; done
-	cp $(ELKS_DIR)/arch/i86/boot/Image $(TARGET_MNT)/boot/linux
-	cp $(KHELPER) $(TARGET_MNT)/boot/boot
-	umount $(COMB_TARGET_FS)
-	dd if=$(FD_BSECT) of=$(COMB_TARGET_FS) bs=512 count=2 conv=notrunc
-
-full3: mount_full3fs $(ELKS_DIR)/arch/i86/boot/Image $(FD_BSECT) $(KHELPER)
-	@for i in $(DIRS); do make -C $$i rfs ; done
-	cp $(ELKS_DIR)/arch/i86/boot/Image $(TARGET_MNT)/boot/linux
-	cp $(KHELPER) $(TARGET_MNT)/boot/boot
-	umount $(FULL3_TARGET_FS)
-	dd if=$(FD_BSECT) of=$(FULL3_TARGET_FS) bs=512 count=2 conv=notrunc
-
-full5: mount_full3fs $(ELKS_DIR)/arch/i86/boot/Image $(FD_BSECT) $(KHELPER)
-	cd $(ELKSNET_DIR)/ktcp ; \
-        make ; \
-        cp -p -f ktcp $(TARGET_MNT)/bin
-	@for i in $(DIRS); do make -C $$i rfs ; done
-	cp $(ELKS_DIR)/arch/i86/boot/Image $(TARGET_MNT)/boot/linux
-	cp $(KHELPER) $(TARGET_MNT)/boot/boot
-	umount $(FULL3_TARGET_FS)
-	dd if=$(FD_BSECT) of=$(FULL3_TARGET_FS) bs=512 count=2 conv=notrunc
-
-root: mount_rootfs
-	@for i in $(DIRS); do make -C $$i min_rfs ; done
-	umount $(ROOT_TARGET_FS)
-	
-comb_net: mount_rootnetfs $(ELKS_DIR)/arch/i86/boot/Image $(FD_BSECT) $(KHELPER)
-	cd $(ELKSNET_DIR)/ktcp ; \
-	make ; \
-	cp -p -f ktcp $(TARGET_MNT)/bin
-	@for i in $(DIRS); do make -C $$i net_rfs ; done
-	cp $(ELKS_DIR)/arch/i86/boot/Image $(TARGET_MNT)/boot/linux
-	cp $(KHELPER) $(TARGET_MNT)/boot/boot
-	umount $(ROOT_NET_TARGET_FS)
-	dd if=$(FD_BSECT) of=$(ROOT_NET_TARGET_FS) bs=512 count=2 conv=notrunc
-
-sibo: mount_sibofs
-	@for i in $(DIRS); do make -C $$i smin_rfs ; done
-	umount $(SIBO_TARGET_FS)
+root:
+	@$(MAKE) _build_nonbootable_target \
+		TARGET_FS=$(ROOT_TARGET_FS) \
+		TARGET_RFS=min_rfs \
+		TARGET_BLKS=$(ROOT_TARGET_BLKS)
+       
+# FIXME: should use SIBODEV instead of MAKEDEV
+sibo:
+	@$(MAKE) _build_nonbootable_target \
+		TARGET_FS=$(SIBO_TARGET_FS) \
+		TARGET_RFS=smin_rfs \
+		TARGET_BLKS=$(SIBO_TARGET_BLKS)
 
 images.zip: boot comb root comb_net full3 full5
 	zip images.zip boot root comb comb_net full3 full5
